err/imstool.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/imstool'...
Compiling './lib/python3.5/site-packages/imstool/__init__.py'...
***   File "./lib/python3.5/site-packages/imstool/__init__.py", line 42
    except ManifestError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imstool/bb'...
Compiling './lib/python3.5/site-packages/imstool/bb/bboard.py'...
***   File "./lib/python3.5/site-packages/imstool/bb/bboard.py", line 49
    raise ManifestError, manifestNotFound
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imstool/imscc'...
Compiling './lib/python3.5/site-packages/imstool/imscc/ccreader.py'...
***   File "./lib/python3.5/site-packages/imstool/imscc/ccreader.py", line 159
    raise ManifestError, 'Required tag "title" missing in lom/general metadata section for resource.'
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imstool/imscc/imscc.py'...
***   File "./lib/python3.5/site-packages/imstool/imscc/imscc.py", line 50
    raise ManifestError, 'Could not locate manifest file.'
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imstool/imscp'...
Compiling './lib/python3.5/site-packages/imstool/imscp/cpreader.py'...
***   File "./lib/python3.5/site-packages/imstool/imscp/cpreader.py", line 124
    raise ManifestError, 'Required tag "title" missing in lom/general metadata section for resource.'
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imstool/imscp/imscp.py'...
***   File "./lib/python3.5/site-packages/imstool/imscp/imscp.py", line 50
    raise ManifestError, manifestNotFound
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imstool/mitocw'...
Compiling './lib/python3.5/site-packages/imstool/mitocw/mitocw.py'...
***   File "./lib/python3.5/site-packages/imstool/mitocw/mitocw.py", line 56
    raise ManifestError, 'Could not locate manifest file.'
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imstool/mitocw/mitreader.py'...
***   File "./lib/python3.5/site-packages/imstool/mitocw/mitreader.py", line 153
    raise ManifestError, 'Required tag "title" missing in lom/general metadata section for resource.'
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imstool/moodle'...
Compiling './lib/python3.5/site-packages/imstool/moodle/moodle.py'...
***   File "./lib/python3.5/site-packages/imstool/moodle/moodle.py", line 50
    raise ManifestError, 'Could not locate manifest file.'
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imstool/qti'...
Listing './lib/python3.5/site-packages/imstool/webct'...
Compiling './lib/python3.5/site-packages/imstool/webct/webct.py'...
***   File "./lib/python3.5/site-packages/imstool/webct/webct.py", line 49
    raise ManifestError, manifestNotFound
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imstool/webctvista'...
Listing './lib/python3.5/site-packages/imstool-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
